--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"><img width="250" src="/assets/img/etimologia-pokemon.png" alt=""></a>
+        <a class="navbar-brand"><img width="250" src="/assets/img/etimologia-pokemon.png" alt="Logo do Site"></img></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
             aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
             <span class="navbar-toggler-icon"></span>
@@ -176,7 +176,7 @@
     <div class="row">
         <div class="col-md-12">
             <p class="text-center">
-                Todos os direitos reservados: Thiago Lima &copy
+                Todos os direitos reservados: <b>Mathias Niashi &copy</b>
             </p>
         </div>
     </div>
