--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand"><img width="250" src="assets/img/etimologia-pokemon.png" alt="Logo do Site"></img></a>
+        <a class="navbar-brand"><img width="250" src="https://fontmeme.com/temporary/f4c3c84f9b00fe4565f2c181c211ba10.png" alt="Logo do Site"></img></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
             aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
             <span class="navbar-toggler-icon"></span>
