--- a/index.html
+++ b/index.html
@@ -7,11 +7,24 @@
     <title>Etimologia Pokémon</title>
 
     <style>
+        /* Importando a fonte PT Mono */
+        @import url('https://fonts.googleapis.com/css2?family=PT+Mono&display=swap');
+
         .tm-social {
-            width: 50px;
-            height: 50px;
+            width: 40px;
         }
+
+        .tm-icone {
+            width: 30px;
+        }
+
+        * {
+            font-family: 'PT Mono', monospace;
+            font-size: 15px;
+        }
+
     </style>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -19,7 +32,7 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand"><img width="250" src="https://fontmeme.com/temporary/f4c3c84f9b00fe4565f2c181c211ba10.png" alt="Logo do Site"></img></a>
+        <a class="navbar-brand" href="#"><img width="250" src="https://fontmeme.com/temporary/f4c3c84f9b00fe4565f2c181c211ba10.png" alt="Logo do Site"></img></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
             aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
             <span class="navbar-toggler-icon"></span>
@@ -28,10 +41,10 @@
         <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Página Inicial<span class="sr-only">(página atual)</span></a>
+                    <a class="nav-link text-dark " href="#">Vídeos<span class="sr-only">(página atual)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" href="#">Curiosidades</a>
+                    <a class="nav-link text-dark" href="#">Etimologia</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -39,13 +52,13 @@
                         Redes Sociais
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">GitHub</a>
+                        <a class="dropdown-item" href="https://github.com/Niashi" target="_blank">GitHub</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">LinkedIn</a>
+                        <a class="dropdown-item" href="https://www.linkedin.com/in/niashi" target="_blank">LinkedIn</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled text-dark" href="#">Info</a>
+                    <a class="nav-link disabled text-dark" href="#">Entre em Contato</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -90,49 +103,71 @@
 
     <!-- Grid -->
     <div class="container">
-        <div class="row mt-5 mb-5 d-flex">
-            <div class="col-md-6 p-0">
+        <div class="container mt-4">
+            <div class="row">
+                <h2>
+                    <img src="/assets/img/pokeball.png" alt="Ícone de Pokébola" class="tm-icone mr-2"></img>Vídeos
+                </h2>
+            </div>
+        </div>
+        
+        <!-- Linha de vídeos -->
+        <div class="row mt-5 mb-5">
+            <!-- Vídeo 1 -->
+            <div class="col-md-6">
                 <div><iframe class="shadow-lg p-3 mb-5 rounded" width="560" height="315" src="https://www.youtube.com/embed/j5KvubvurDA" title="YouTube video player"
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
                 </div>
             </div>
-            <div class="col-md-6 p-0">
-                <div class="col-md-6 p-0"><iframe class="shadow-lg p-3 mb-5 rounded" width="500" height="300" src="https://www.youtube.com/embed/m0wnC9PvubU" title="YouTube video player"
+            <!-- /Vídeo 1 -->
+
+            <!-- Vídeo 2 -->
+            <div class="col-md-6">
+                <div class="col-md-6 p-0"><iframe class="shadow-lg p-3 mb-5 rounded" width="560" height="315" src="https://www.youtube.com/embed/m0wnC9PvubU" title="YouTube video player"
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
             </div>
-            </div>
+            <!-- /Vídeo 2 -->
         </div>
+        <!-- /Linha de vídeos -->
     </div>
     <!-- /Grid -->
 
-<!-- Cards -->
-<div class="card-deck container ">
+<!-- Conjunto de cards -->
+<div class="card-deck container">
+    <!-- Card 1 -->
     <div class="card shadow-lg p-3 mb-5 rounded">
-        <img class="card-img-top" width="150" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/015.png" alt="Imagem de capa do card">
+        <img class="card-img-top" width="150" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/015.png" alt="Imagem de Beedrill">
         <div class="card-body">
-            <h5 class="card-title">Beedril</h5>
-            <p class="card-text">[bee + drill] > abelha broca, numa relação às patas pontudas do pokémon.</p>
+            <h5 class="card-title">Beedrill</h5>
+            <p class="card-text">[bee + drill] > abelha broca, numa relação às patas pontudas e afiadas do pokémon.</p>
         </div>
     </div>
+    <!-- /Card 1 -->
+
+    <!-- Card 2 -->
     <div class="card shadow-lg p-3 mb-5 rounded">
-        <img class="card-img-top" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/001.png" alt="Imagem de capa do card">
+        <img class="card-img-top" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/001.png" alt="Imagem de Bulbasaur">
         <div class="card-body">
             <h5 class="card-title">Bulbasaur</h5>
             <p class="card-text">[bulb + saur] > dinossauro com bulbo, em relação ao elemento das costas do pokémon.</p>
         </div>
     </div>
+    <!-- /Card 2 -->
+
+    <!-- Card 3 -->
     <div class="card shadow-lg p-3 mb-5 rounded">
-        <img class="card-img-top" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/044.png" alt="Imagem de capa do card">
+        <img class="card-img-top" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/044.png" alt="Imagem de Gloom">
         <div class="card-body">
             <h5 class="card-title">Gloom</h5>
             <p class="card-text">A união entre gloom (depressão) e bloom (florescimento), numa relação ao aspecto depressivo
             deste pokémon planta.</p>
         </div>
     </div>
+    <!-- /Card 3 -->
 </div>
-<!-- /Cards -->
+<!-- /Conjunto de cards -->
 
 <!-- Formulário -->
 <div class="container mb-5">
@@ -164,22 +199,30 @@
 <hr>
 <footer>
 
-    <div class="row mb-3">
+    <!-- Linha 1 -->
+    <div class="row">
+        <!-- Primeira coluna da Linha 1 -->
         <div class="col-md-12 d-flex justify-content-center">
-
-            <a href="https://github.com/Niashi" target="_blank" class="p-3">
+            <a href="https://github.com/Niashi" target="_blank" class="p-2">
                 <img class="tm-social" src="assets/img/github.png" alt="Logo do GitHub">
             </a>
         </div>
+        <!-- /Primeira coluna da Linha 1 -->
     </div>
+    <!-- /Linha 1 -->
 
+    <!-- Linha 2 -->
     <div class="row">
+        <!-- Primeira coluna da Linha 2 -->
         <div class="col-md-12">
             <p class="text-center">
                 Todos os direitos reservados: <b>Mathias Niashi &copy</b>
             </p>
         </div>
+        <!-- /Primeira coluna da Linha 2 -->
     </div>
+    <!-- /Linha 2 -->
+
 </footer>
 <!--/Rodapé-->
 
