--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"><img width="250" src="/assets/img/etimologia-pokemon.png" alt="Logo do Site"></img></a>
+        <a class="navbar-brand" href="#"><img width="250" src="./assets/img/etimologia-pokemon.png" alt="Logo do Site"></img></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
             aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
             <span class="navbar-toggler-icon"></span>
@@ -106,7 +106,7 @@
         <div class="container mt-4">
             <div class="row">
                 <h2>
-                    <img src="/assets/img/pokeball.png" alt="Ícone de Pokébola" class="tm-icone mr-2"></img>Vídeos
+                    <img src="./assets/img/pokeball.png" alt="Ícone de Pokébola" class="tm-icone mr-2"></img>Vídeos
                 </h2>
             </div>
         </div>
