--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="card shadow-lg p-3 mb-5 rounded">
             <img class="card-img-top" width="150" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/015.png" alt="Imagem de Beedrill">
             <div class="card-body">
-                <h5 class="card-title">Beedrill</h5>
+                <h5 class="card-title"><b>Beedrill</b></h5>
                 <p class="card-text">[bee + drill] > abelha broca, numa relação às patas pontudas e afiadas do pokémon.</p>
             </div>
         </div>
@@ -161,7 +161,7 @@
         <div class="card shadow-lg p-3 mb-5 rounded">
             <img class="card-img-top" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/001.png" alt="Imagem de Bulbasaur">
             <div class="card-body">
-                <h5 class="card-title">Bulbasaur</h5>
+                <h5 class="card-title"><b>Bulbasaur</b></h5>
                 <p class="card-text">[bulb + saur] > dinossauro com bulbo, em relação ao elemento das costas do pokémon.</p>
             </div>
         </div>
@@ -171,7 +171,7 @@
         <div class="card shadow-lg p-3 mb-5 rounded">
             <img class="card-img-top" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/044.png" alt="Imagem de Gloom">
             <div class="card-body">
-                <h5 class="card-title">Gloom</h5>
+                <h5 class="card-title"><b>Gloom</b></h5>
                 <p class="card-text">A união entre gloom (depressão) e bloom (florescimento), numa relação ao aspecto depressivo
                 deste pokémon planta.</p>
             </div>
